@@ -313,6 +313,10 @@
 
       \item \code{read.dcf()} now consistently interprets any
       \sQuote{whitespace} to be stripped to include newlines.
+
+      \item The maximum number of DLLs that can be loaded into R e.g. via
+      dyn.load can now be increased by setting the environment variable
+      \code{R_MAX_NUM_DLLS} before starting R.
     }
   }
 
